@@ -132,6 +132,7 @@ public interface EntityConnection {
    * @param order if true then the result is ordered
    * @return the values in the given column (Property) in the given table (Entity)
    * @throws DatabaseException in case of a db exception
+   * @throws IllegalArgumentException in case the given property is not a column based property
    */
   List<Object> selectPropertyValues(final String entityID, final String propertyID, final boolean order) throws DatabaseException;
 
